--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,7 +36,7 @@ dist.jlink.output=${dist.jlink.dir}/operatingSystems
 endorsed.classpath=
 excludes=
 includes=**
-jar.compress=false
+jar.compress=true
 javac.classpath=\
     ${libs.JavaFX12.classpath}:\
     ${libs.JFOenix.classpath}
